bug: fix added scrollbar width when not needed

--- a/src/styles/components/_initiative-list.scss
+++ b/src/styles/components/_initiative-list.scss
@@ -3,5 +3,5 @@
     padding-bottom: map-get($space-sizes, xlarge);
     width: 100lvw;
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
